# BacendArc

./: .env  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  conf.py  main.py  pyproject.toml
backend/src/api/: answer.py  group.py  question.py  routers.py  user.py
backend/src/db/: pg.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 7a90203192f1_init.py  e6d04a610102_answer.py
backend/src/model/: answer.py  group.py  question.py  user.py
backend/src/repositories/: answer.py  group.py  question.py  user.py
backend/src/scheme/: answer.py  group.py  question.py  user.py
backend/src/service/: answer.py  group.py  question.py  user.py
backend/src/util/: auth.py  enum.py  repository.py  user_config.py
backend/tests/: async_tests.py  conftest.py  test_pytest.py
client/: app.py
client/pages/: announcements_page.py  get_question_bu_quiz_id.py  get_result_by_test.py  get_stud_by_group.py  main.py  menu.py  post_test.py
client/templates/: buttons.py
database/: postmaster.pid
database/base/1/: 1259  2619  2619_vm  2696  2840  2841
database/base/5/: 1247  1249  1259  16384  16387  16389  16390  16394  16396  16397  16402  16403  16405  16406  16410  16417  16418  16423  16424  16426  16427  16431  16443  16444  16448  16460  16461  16465  16481  16482  16486  16488  16489  16493  2224  2579  2604  2606  (+29 more)
database/global/: 1260  pg_control  pg_internal.init
database/pg_xact/: 0000
service/: Dockerfile  test.db
service/app/: crud.py  main.py  models.py  schemas.py
service/database/: postmaster.pid
(+183 files in other folders)
